--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body { background-color: rgb(253, 251, 251);}
 
-#cabecalho {
-      top: 0; 
-      background-color: aquamarine;
-      position: fixed;
-      padding: 20px;
-}
+#cabecalho { top: 0; background-color: aquamarine; position: fixed; padding: 20px;}
 
 #minha_foto { margin-top: 110px;}
+
+#indice {margin-top: 200px;}
