--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
+#cabecalho {
+  color: blue;
+  position: fixed;
+  top: 0px;
+}
