--- a/style.css
+++ b/style.css
@@ -48,31 +48,25 @@ body {
 }
 
 .lado-esquerdo p {
-    text-align: center;
-    border: 1px solid black;    
+  text-align: center;
+  border: 1px solid black;
 }
 
 .aside {
-    display: inline-block;
-    width: 300px;
-    height: 200px;
-    margin-right: 100px;
-    float: right;
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  margin-right: 100px;
+  float: right;
 }
 
 .aside p {
-    text-align: center;
-    border: 1px solid black;
+  text-align: center;
+  border: 1px solid black;
 }
+
 #rodape {
-    margin-top: 40px;
-    text-align: center;
-    font-weight: bold;
-}
-
-#licoes_aprendidas {
-    display: inline-block;
-    width: 300px;
-    height: 200px;
-
+  margin-top: 40px;
+  text-align: center;
+  font-weight: 600;
 }
