--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body {
     background-color: rgb(253, 251, 251);
 }
+
+#cabecalho {
+    position: fixed;
+    top: 0;
+}
+
+#titulo {
+   font: bolder;
+}
+
+#minha_foto {
+    width: 150px;
+    margin-top: 5em;
+}
+
+#artigo {
+    width: 60%;
+}
+
+#rodape {
+    color: red;
+}
