--- a/style.css
+++ b/style.css
@@ -15,6 +15,20 @@
     padding: 0;
 }
 
+#about_me {
+    /* height: 900px; */
+    margin-top: 200px;
+    padding-bottom: 400px;
+}
+
+body {
+    background-color: var(--background_color);
+}
+
+.border_secondary {
+    border: 3px solid var(--secondary_color);
+}
+
 .button {
     background: var(--tertiary_color);
     border: 2px solid transparent;
@@ -24,6 +38,16 @@
 
 .button:hover {
     border: 2px solid var(--secondary_color);
+}
+
+#cabecalho {
+    background-color: var(--primary_color);
+    position: fixed;
+    top: 0;
+}
+
+#cabecalho div {
+    justify-content: space-between;
 }
 
 .center_all {
@@ -39,23 +63,52 @@
     align-items: center;
 }
 
-#cabecalho {
-    background-color: var(--primary_color);
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-#cabecalho div {
-    justify-content: space-between;
-}
-
 .container {
     margin: 0 8rem;
 }
 
+.cover_height {
+    height: 100%;
+}
+
+.cover_width {
+    width: 100%;
+}
+
 .d_flex {
     display: flex;
+}
+
+.flex_column {
+    flex-direction: column;
+}
+
+#minha_foto {
+    display: none;
+}
+
+.minha_foto {
+    background-image: url(./profile_picture.jpeg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    height: 310px;
+    margin-left: 15px;
+    width: 310px;
+}
+
+.my_infos {
+    border-left: none;
+    border-radius: 0 25px 25px 0;
+    border-top: none;
+    font-size: 18px;
+    height: 40%;
+    padding: 15px 0 0 15px;
+}
+
+.my_infos ul {
+    justify-content: space-between;
+    width: 70%;
 }
 
 .navbar {
@@ -78,6 +131,50 @@
 .no_decoration {
     list-style: none;
     text-decoration: none;
+}
+
+.presentation {
+    font-size: 3rem;
+    height: 60%;
+    padding-left: 15px;
+}
+
+.presentation h2 {
+    border-right: transparent;
+    border-radius: 25px 0 0 25px;
+    padding-top: 25px;
+}
+
+.self_resume {
+    border-right: none;
+    border-top: none;
+    border-radius: 25px 0 0 25px;
+    padding: 20px 5px 0;
+}
+
+.sec_about_me {
+    display: grid;
+    grid-template-areas: 'ab1 ab1 ab3'
+                         'ab2 ab2 ab3';
+    grid-template-columns: 35% 35% 30%;
+    grid-template-rows: 200px
+                        100px;
+}
+
+.sec_ab_1 {
+    grid-area: ab1;
+}
+
+.sec_ab_2 {
+    grid-area: ab2;
+}
+
+.sec_ab_3 {
+    grid-area: ab3;
+}
+
+.sec_title {
+    font-size: 3rem;
 }
 
 #titulo {
