--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
   color: rgb(105, 105, 105);
   line-height: 1.5;
@@ -18,14 +18,15 @@ body {
   height: 150px;
 }
 
-table, tr, td {
-  margin-top: 10px;  
+table , tr , td {
+  margin-top: 10px;
   border: 1px solid black;
 }
 
-.lado-esquerdo , .lado-direito{
-  display:inline-block    
+.lado-esquerdo , .lado-direito {
+  display: inline-block;
 }
+
 .lado-esquerdo {
   float: left;
   width: 60%;
@@ -34,5 +35,4 @@ table, tr, td {
 .lado-direito {
   float: right;
   width: 30%;
-      
 }
