--- a/style.css
+++ b/style.css
@@ -1,20 +1,62 @@
-html {
+*{
   margin: 0;
   padding: 0;
   border: 0;
 }
 body {
   background-color: rgb(253, 251, 251);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: medium;
+
 }
-.content {
-  align-items: center;
+.content{
+  width: 1366;
+  align-content: center;
+}
+.lista-menu{
+  text-decoration: none;
+  display: inline;
+  text-decoration-style: solid;
+}
+.lista-menu:hover{
+  color: blue;
+}
+.profphoto{
+  width: 200;
+  position: absolute;
+  top: 155px;
+}
+.lists{
+  display: inline;
+  position: relative;
+  top: 300px;
+}
+.artigos{
+  display: inline;
+}
+.lado-esquerdo{
+  float: left;
+}
+.footer{
+  position: absolute;
+  bottom: 0;
+  background-color: rgb(5, 73, 100);
+  width: 100%;
 }
 #cabecalho{
   position: fixed;
+  width: 100%;
+  height: 100px;
+  display: inline;
   top: 0;
-  background-color: rgb(9, 118, 226);
-  height: 300px;
+  margin-bottom: 5px;
+  background-color: rgb(226, 89, 9);
 }
-#licoes_a_aprender {
+#licoes_a_aprendidas{
+  display: inline-block;
+  background-color: rgb(9, 118, 226);
+}
+#licoes_a_aprender{
+  display: inline-block;
   background-color: rgb(9, 118, 226);
 }
