--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 nav {
@@ -82,6 +83,7 @@ img {
   margin-top: 80px;
   text-align: center;
   position: relative;
+  z-index: 1;
   padding: 0 50px;
 }
 
@@ -125,6 +127,14 @@ img {
 .artigos .lado-direito h2 {
   margin-bottom: 50px;
   text-decoration: underline;
+}
+
+table {
+  border: 3px solid rgb(47, 193, 140);
+  background-color: rgb(3, 107, 82);
+  color: white;
+  margin: auto;
+  margin-top: 80px;
 }
 
 footer {
