--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body { background-color: rgb(253, 251, 251);}
 
-#cabecalho { top: 0; background-color: aquamarine; position: fixed; padding: 20px;}
+#cabecalho { top: 0; background-color: aquamarine; position: fixed;}
 
 #minha_foto { margin-top: 110px;}
 
