--- a/style.css
+++ b/style.css
@@ -2,8 +2,27 @@ body {
 background-color: rgb(253, 251, 251);
 }
 #cabecalho{ top: 0%;
+    background-color: pink;
+
 
 }
 #titulo {
+
+}
+#minha_foto{
+
+}
+
+#licoes_aprendidas{
+
+
+}
+
+#licoes_a_aprender {
+
+}
+
+#rodape {  
+
 
 }
