--- a/style.css
+++ b/style.css
@@ -1,8 +1,52 @@
+* {
+  margin: 0;
+}
+
 body {
   background-color: rgb(253, 251, 251);
 }
 
+h1{
+  margin-top: 35px;
+  text-align: center;
+}
+
+.topo_da_pagina {
+  background-color: #87CEFA;
+  height: 100px;
+  width: 100%;
+}
+
 #cabecalho {
-  position: fixed;
+  position: fixed;  
   top: 0;
+  width: 100%;
+}
+
+.Foto_e_link {
+  width: 100%;
+  height: 210px;
+}
+
+#minha_foto {
+  border-radius: 100%;
+  float: inline-end;
+  width: 200px;
+}
+
+.lista {
+  width: 60%;
+}
+
+#perfilt {
+  background-color: red;
+  border: 1px solid black;
+  border-radius: 25%;
+  margin: auto;
+  padding: 30px 15px;
+  text-align: left;
+}
+
+#licoes_aprendidas{
+  display: block;
 }
