--- a/style.css
+++ b/style.css
@@ -1,8 +1,87 @@
 body {
   background-color: rgb(253, 251, 251);
+  margin: 0;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
+  display: block;
+  width: 100%;
+ background-color: #036b52;
+  overflow: hidden;
+}
+
+
+h1 {
+  display: inline-block;
+  margin: 0;
+  color: #fff;
+}
+
+/**
+* Consultei o site W3shools para realizar o menu fixado
+* link: https://www.w3schools.com/howto/howto_css_fixed_menu.asp
+*/
+
+.menu a {
+  display: block;
+  width: 10%;
+  float: left;
+  text-decoration: none;
+  text-align: center;
+  padding: 14px 16px;
+  color: #fff;
+}
+
+.principal {
+  margin-top: 55px;
+}
+
+.menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.principal {
+  background-color: #036b52;
+}
+
+.inicio {
+  display: block;
+  max-width: 1366px;
+  max-height: 500px;
+
+}
+#minha_foto {
+  width: 100%;
+  max-height: 200px;
+  display: block;
+}
+
+.table {
+  display: block;
+  background-color: ;
+}
+
+.table ol {
+  list-style-type: none;
+}
+
+#licoes_aprendidas {
+  display: inline-block;
+  width: 500px;
+  padding: 0px;
+  margin-left: 50px;
+  margin-right: 200px;
+  background-color: #fff;
+  list-style-type: none;
+}
+
+#licoes_a_aprender {
+  display: inline-block;
+  width: 500px;
+  padding: 0px;
+  background-color: #fff;
+  list-style-type: none;
 }
