Alterações no arquivo style.css e no centralização do título

--- a/style.css
+++ b/style.css
@@ -6,11 +6,18 @@ body {
 header {
   position: fixed;
   top: 0;
+  width: 100%;
+  background-color: black;
 }
 
 header h1 {
   text-align: center;
-  display: inline;
+  width: 100%;
+  color: white;
+}
+
+section nav {
+  color: white;
 }
 
 #minha_foto {
