--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(253, 251, 251);
+    font-family:'Courier New', Courier, monospace;
 }
 header{
     position: fixed;
@@ -11,10 +12,12 @@ header{
 }
 h1{
    text-align: center;
+   font-size:xx-large;
+   
 }
 section{
     display: block;
-    margin-top: 10%;
+    margin-top: 12%;
 }
 
 .nav_links{
@@ -32,6 +35,41 @@ nav{
     width: 100%;
     display: inline-block;
     text-align: center;
-    background-color: rgb(221, 217, 217)
+    background-color: rgb(221, 217, 217);
+}
 
+table, th, td{
+    border: 1px solid gray;
+}
+table{
+    width: 100%;
+}
+ol li{
+    line-height: 30px;
+}
+ul li{
+    line-height: 30px;
+}
+main{
+    display: inline-block;
+    width: 100%;
+}
+
+.lado-direito{
+    float: right;
+    margin-left: auto;
+    display: block;
+    width: 20%;
+    text-align: justify
+}
+.lado-esquerdo{
+    float: left;
+    margin-right: auto;
+    width: 70%;
+    display: block;
+    text-align: justify;
+}
+aside{
+    display: block;
+    padding: 10px;
 }
