--- a/style.css
+++ b/style.css
@@ -5,13 +5,39 @@
 
 body {
   background-color: rgb(253, 251, 251);
+  font-family: sans-serif;
+  line-height: 20px;
+  font-size: 16px;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
+  background-color: rgb(47, 193, 140);
+  width: 100%;
+  height: 80px;
+}
+
+h1 {
+  margin: 15px 10px;
+  color: bisque;
+}
+
+a {
+  padding: 5px 10px;
+  background-color: azure;
+  border-radius: 3px;
+  text-decoration: none;
+  margin: 5px 0 0 10px;
+}
+
+a:hover {
+  background-color: rgb(110, 241, 193);
 }
 
 #minha_foto {
-  width: 250px;
+  margin: 120px 0 0 15px;
+  width: 300px;
+  border-radius: 50%;
 }
+
