--- a/style.css
+++ b/style.css
@@ -4,9 +4,49 @@ body {
 
 #cabecalho {
   top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   position: fixed;
 }
 
-nav {
-  margin-top: 100px;
+#titulo {
+  width: 100%;
+  text-align: center;
+}
+
+nav, article, aside, section, footer {
+  border: dashed 1px rgb(58, 57, 97)
+}
+
+nav ul {
+  list-style:upper-roman;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+#minha_foto {
+  width: fit-content;
+  border: dashed 1px rgb(58, 57, 97);
+}
+
+#artigo {
+  width: 40%;
+  text-align: justify;
+}
+
+aside {
+  width: 40%;
+  text-align: justify;
+}
+
+section {
+  margin: 10px 125px;
+  width: 80%;
+}
+
+#contatos {
+  border: dashed 1px rgb(58, 57, 97);
 }
