--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  /* Meus ajustes */
+  text-align: justify;
 }
 
 /* 2. Adicione uma barra superior com um título*/
@@ -16,10 +18,24 @@ body {
 /*14. Altere atributos relacionados como fontes*/
 header h1 {
   font-size: 50px;
-  color: rgba(61,73,92);
+  color: rgba(61, 73, 92);
   font-family: monospace;
 }
 
-p, li {
+p,
+li {
   line-height: 25px;
+}
+
+/*15. Posicione o seu artigo e a seção sobre aprendizados um ao lado do outro*/
+.lado-esquerdo {
+  display: inline-block;
+  float: left;
+  width: 45%;
+}
+
+.lado-direito {
+  display: inline-block;
+  float: right;
+  width: 45%;
 }
