--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
 body {
   background-color: rgb(253, 251, 251);
   margin: 7%;
-  padding: 10px;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
+  text-align: center;
+  margin-left: 30%;
 }
 
 table tr td{
