--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   position: fixed;
   width: 100%;
   height: 80px;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   background-color: rgb(122, 241, 202);
   text-align: center;
 }
@@ -23,7 +23,7 @@ body {
 
 .head {
   border-style: solid;
-  border-width: 0px;
+  border-width: 0;
   display: inline;
 }
 
@@ -46,6 +46,10 @@ main {
   padding-left: 1px;
 }
 
+aside h2,article h2 {
+  font-size: 16px;
+}
+
 .listas li {
   font-size: 12px;
 }
@@ -63,11 +67,7 @@ main {
   text-align: justify;
 }
 
-aside h2, article h2 {
-  font-size: 16px;
-}
-
-aside p, article p {
+aside p,article p {
   font-size: 13px;
 }
 
