--- a/style.css
+++ b/style.css
@@ -1,10 +1,49 @@
 /* RESET CSS */
 
+html,
+body,
+div,
+span,
+figure,
+figcaption,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+ol,
+ul,
+li,
+header,
+main,
+article,
+footer,
+section,
+textarea {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    list-style: none;
+    line-height: 1;
+}
+
 
 /* ----------------------------------------------------------------------------------------------- */
 
 
 /* TAG */
+
+h1 {}
+
+h2 {}
+
+h3 {}
 
 
 /* ----------------------------------------------------------------------------------------------- */
@@ -12,11 +51,47 @@
 
 /* ID */
 
+#cabecalho {}
+
+#menubar {}
+
+#titulo {}
+
+#perfil {}
+
+#perfil__box_img {}
+
+#minha_foto {}
+
+#meu_nome {}
+
+#listas {}
+
+#licoes_aprendidas {}
+
+#licoes_a_aprender {}
+
+#artigo {}
+
+#artigo_meu_aprendizado {}
+
+#artigo_box {}
+
+#notas {}
+
+#notas_do_artigo {}
+
 
 /* ----------------------------------------------------------------------------------------------- */
 
 
 /* CLASS */
+
+.list__box {}
+
+.list_item {}
+
+.text {}
 
 
 /* ----------------------------------------------------------------------------------------------- */
