--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
   float: right;
 }
 
+#nav a {
+  text-decoration: none;
+}
+
 #rodape {
   clear: both;
   margin-top: 80px;
@@ -43,18 +47,23 @@ body {
   font-size: 30px;
 }
 
-table {  
-	border: 1px solid black;
+table {
+  border: 1px solid black;
   margin-left: 35%;
   margin-top: 30px;
 }
 
-th {
+td {
   border: 1px solid black;
   padding: 15px;
   font-family: monospace;
   color: cadetblue;
   line-height: 2px;
+  font-size: 20px;
+}
+
+th {
+  border: 1px solid black;
   font-size: 20px;
 }
 
