--- a/style.css
+++ b/style.css
@@ -25,14 +25,11 @@ body{
 
 #main{
     padding: 10px 10px;
+    background-color: rgb(119, 119, 119);
 }
 
 #licoes_aprendidas{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#secao{
-    background-color: rgb(119, 119, 119);
 }
 
 #secao_list{
@@ -45,6 +42,12 @@ body{
 }
 
 #rodape{
-    background-color: rgb(119, 119, 119);
+    background-color: rgb(22, 21, 19);
+    color: aliceblue;
+    text-align: center;
     padding: 10px 10px;
+}
+
+#link{
+    margin-left: 20px;
 }
