--- a/style.css
+++ b/style.css
@@ -1,29 +1,32 @@
 body {
-    background-color: rgb(253, 251, 251);
-    color: blue;
+  background-color: rgb(253, 251, 251);
+  color: blue;
 }
+
 header {
-    position: fixed;
-    top: 0px;
+  position: fixed;
+  top: 0;
 }
+
 h1 {
-    font-size:50px;
-    font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .lado-esquerdo {
-    display: inline-block;
-    background-color: chartreuse;
-    border-radius: 20px;
+  display: inline-block;
+  background-color: chartreuse;
+  border-radius: 20px;
 }
 
 .lado-direito {
-    display: inline-block;
-    background-color: coral;
-    border-radius: 20px;
-   
+  display: inline-block;
+  background-color: coral;
+  border-radius: 20px;
+
 }
 
 article {
-    padding-block: 100px;
+  padding-block: 100px;
 }
 
