--- a/style.css
+++ b/style.css
@@ -149,7 +149,8 @@ body {
     border-right: none;
     border-top: none;
     border-radius: 25px 0 0 25px;
-    padding: 20px 5px 0;
+    padding: 12px 5px 0;
+    text-align: justify;
 }
 
 .sec_about_me {
