--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-body { background-color: rgb(253, 251, 251);}
+body { background-color: rgb(253, 251, 251);
+    font-family: 'Anton', sans-serif;
+    color: rgb(44, 42, 42);
+    font-size: medium;line-height: 25px;}
 
-#cabecalho { top: 0; background-color: aquamarine; position: fixed;}
+#cabecalho { top: 0;
+    background-color: aquamarine;
+    position: fixed;}
 
 #minha_foto { margin-top: 110px;}
 
-#indice {margin-top: 200px;}
+#indice { margin-top: 200px;}
