--- a/style.css
+++ b/style.css
@@ -7,15 +7,27 @@ body {
 }
 
 #cabecalho {
+  width: 100%
   position: fixed;
   top: 0;
+  text-align: center;
+}
+
+.indice {
+  display: inline-block; 
+  margin-top: 100px;
 }
 
 img {
   width: 300px;
   height: 300px;
+  border: 10px;
+  margin-left: 20px;
+  border-radius: 100%;
 }
 
 table {
   border: 1;
+  padding: 10px;
+  margin: 10px 30px;
 }
