--- a/style.css
+++ b/style.css
@@ -1,77 +1,78 @@
 body {
-    background-color: rgb(253, 251, 251);
-    text-align: left;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    color: #333333;
-    margin-top: 150px;
+  background-color: rgb(253, 251, 251);
+  text-align: left;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #333;
+  margin-top: 150px;
 }
 
 #cabecalho {
-    position: fixed;
-    width: 92.5%;
-    top: 0;
-    opacity: ;
+  position: fixed;
+  width: 92.5%;
+  top: 0;
+  opacity: ;
+  text-align: center;
 }
 
 #minha_foto {
-    display: block;
-    width: 200px;
-    border-radius: 100%;
+  display: block;
+  width: 200px;
+  border-radius: 100%;
 }
  
 #tabela_spec {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 #tabela_spec td {
-    border: 1px solid  black;
-    padding: 10px;
+  border: 1px solid  black;
+  padding: 10px;
 }
 
 nav {
-    background-color: #E3CFB3;
-    padding: 100px;
+  background-color: #e3cfb3";
+  padding: 100px;
 }
 
-header, nav, article, section, ol, ul, aside, table, footer {
-    margin: 10px;
-    padding: 30px;
-    border: 2px solid black;
+header , nav , article , section , ol , ul , aside , table , footer {
+  margin: 10px;
+  padding: 30px;
+  border: 2px solid black;
 }
 
 img {
-    margin: 10px;
-    padding: 10x;
-    border: 1px solid black;
-    box-shadow: 5px 5px 25px black;
+  margin: 10px;
+  padding: 10x;
+  border: 1px solid black;
+  box-shadow: 5px 5px 25px black;
 }
 
 #sobre {
-    background-color: #818EB3;
-    width: 40%;
+  background-color: #818eb3;
+  width: 40%;
 }
 
 #listas {
-    background-color: #BD4F74;
-    width: 40%;
-    margin-left: 650px;
-    margin-top: -430px;
+  background-color: #bd4f74;
+  width: 40%;
+  margin-left: 650px;
+  margin-top: -430px;
     }
 
 article {
-    background-color: #97BEC7;
+  background-color: #97bec7;
 }
 
 ol, ul {
-    background-color:#E3CFB3;
+  background-color:#e3cfb3;
 }
 
 #trajetoria {
-    background-color: #818EB3;
+  background-color: #818eb3;
 }
 
 #rodape {
-    text-align: center;
+  text-align: center;
 }
