--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: rgb(253, 251, 251);
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
-  color: rgb(105, 105, 105);
+  color:dimgray;
   line-height: 1.5;
 }
 
@@ -36,3 +36,4 @@ table , tr , td {
   float: right;
   width: 30%;
 }
+
