--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #cabecalho {
-  width: 100%
+  font-family: Arial, Helvetica, sans-serif;
   position: fixed;
   top: 0;
   text-align: center;
@@ -28,6 +28,7 @@ img {
 
 table {
   border: 1;
+  font-size: 15px;
   padding: 10px;
   margin: 10px 30px;
 }
