--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: monospace;
   color: rgb(120, 70, 81);
   line-height: 2em;
   font-size: 1.2em;
@@ -20,11 +20,11 @@ body {
 }
 
 nav, article, aside, section, footer {
-  border: dashed 1px rgb(58, 57, 97)
+  border: dashed 1px rgb(58, 57, 97);
 }
 
 nav ul {
-  list-style:upper-roman;
+  list-style: upper-roman;
 }
 
 nav ul li a {
@@ -33,7 +33,8 @@ nav ul li a {
 
 #minha_foto {
   width: fit-content;
-  border: dashed 1px rgb(58, 57, 97);
+  border: solid 2px rgb(58, 57, 97);
+  border-radius: 100%;
 }
 
 #artigo {
