--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
   background-color: rgb(253, 251, 251);
   margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: medium;
+  word-spacing: 4px;
+  line-height: normal;
 }
 
 #cabecalho {
@@ -8,7 +12,7 @@ body {
   top: 0;
   display: block;
   width: 100%;
- background-color: #036b52;
+ background-color:#036b52;
   overflow: hidden;
 }
 
@@ -16,7 +20,7 @@ body {
 h1 {
   display: inline-block;
   margin: 0;
-  color: #fff;
+  color:#fff;
 }
 
 /**
@@ -31,20 +35,17 @@ h1 {
   text-decoration: none;
   text-align: center;
   padding: 14px 16px;
-  color: #fff;
+  color:#fff;
 }
 
 .principal {
   margin-top: 55px;
+  background-color:#036b52;
 }
 
 .menu a:hover {
   background-color: #ddd;
   color: black;
-}
-
-.principal {
-  background-color: #036b52;
 }
 
 .inicio {
@@ -61,7 +62,6 @@ h1 {
 
 .table {
   display: block;
-  background-color: ;
 }
 
 .table ol {
@@ -74,7 +74,7 @@ h1 {
   padding: 0px;
   margin-left: 50px;
   margin-right: 200px;
-  background-color: #fff;
+  background-color:#fff;
   list-style-type: none;
 }
 
@@ -82,6 +82,40 @@ h1 {
   display: inline-block;
   width: 500px;
   padding: 0px;
-  background-color: #fff;
+  background-color:#fff;
   list-style-type: none;
+}
+
+.lado-esquerdo {
+  display: inline-block;
+  text-align: justify;
+  width: 45%;
+  background-color:#fff;
+  padding: 10px 15px ;
+}
+
+.lado-direito{
+  display: inline-block;
+  text-align: justify;
+  width: 45%;
+  background-color:#fff;
+  padding: 10px 30px;
+}
+
+#rodape {
+  display: block;
+  height: 100px;
+  text-align: center;
+  background-color:#036b52;
+}
+
+#link-final {
+  display: block;
+  padding: 10px;
+  background-color:#fff;
+  text-decoration: none;
+  width: 200px;
+  border: 5px solid black;
+  margin-left: 490px;
+  border-radius: 50%;
 }
