--- a/style.css
+++ b/style.css
@@ -6,31 +6,32 @@ body {
   background-color: rgb(253, 251, 251);
 }
 
-h1{
+h1 {
   margin-top: 35px;
   text-align: center;
 }
 
 .topo_da_pagina {
-  background-color: #87CEFA;
+  background-color: orange;
   height: 100px;
   width: 100%;
 }
 
 #cabecalho {
-  position: fixed;  
+  position: fixed;
   top: 0;
   width: 100%;
 }
 
 .Foto_e_link {
+  display: block;
   width: 100%;
-  height: 210px;
+  height: 300px;
 }
 
 #minha_foto {
   border-radius: 100%;
-  float: inline-end;
+  float: 0;
   width: 200px;
 }
 
@@ -39,16 +40,22 @@ h1{
 }
 
 #perfilt {
+  display: block;
   background-color: red;
   border: 1px solid black;
   border-radius: 25%;
   margin: auto;
   padding: 30px 15px;
   text-align: left;
+  width: 60px;
 }
 
-#licoes_aprendidas{
-  display: block;
+#licoes_aprendidas {
+  display: inline-block;
+}
+
+#licoes_a_aprender {
+  display: inline-block;
 }
 
 p {
@@ -57,4 +64,12 @@ p {
   font-style: italic;
   color: blue;
   line-height: 1.5;
+}
+
+.lado-esquerdo {
+  display: inline-block;
+}
+
+.lado-direito {
+  display: inline-block;
 }
