--- a/style.css
+++ b/style.css
@@ -1,53 +1,53 @@
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
 }
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: medium;
-
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+  font-size: 14px;
 }
-.content{
-  width: 1366;
-  align-content: center;
+table {
+  margin:10px;
+  border: 10px;
 }
-.lista-menu{
-  text-decoration: none;
-  display: inline;
-  text-decoration-style: solid;
+tr {
+  margin:10px;
+  border: 4px;
 }
-.lista-menu:hover{
-  color: blue;
+td {
+  margin:10px;
+  border: 4px;
 }
-.profphoto{
-  width: 200;
+.profphoto {
+  width: 150px;
+  position: relative;
+  top: 5px;
+}
+.lists {
   position: absolute;
-  top: 155px;
+  top: 285px;
 }
-.lists{
-  display: inline;
-}
-.artigos{
+.artigos {
   display: inline;
   line-height: 1.1;
 }
-.lado-direito-centro{
+.lado-direito-centro {
   float: left;
   width: 70%;
 }
-.lado-esquerdo{
+.lado-esquerdo {
   width: 30%;
   float: right;
 }
-.footer{
+.footer {
   position: absolute;
   bottom: 0;
   background-color: rgb(5, 73, 100);
   width: 100%;
 }
-#cabecalho{
+#cabecalho {
   position: fixed;
   width: 100%;
   height: 100px;
@@ -56,11 +56,9 @@ body {
   margin-bottom: 5px;
   background-color: rgb(226, 89, 9);
 }
-#licoes_a_aprendidas{
-  display: inline-block;
-  background-color: rgb(9, 118, 226);
-}
-#licoes_a_aprender{
-  display: inline-block;
-  background-color: rgb(9, 118, 226);
+#minha_foto {
+  border-radius: 195px;
+  border-top-left-radius: 50px;
+  position: absolute;
+  top: 101px;
 }
