--- a/style.css
+++ b/style.css
@@ -6,11 +6,25 @@
 
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Lucida Sans, Lucida Sans Regular, sans-serif;
 }
 
 .max-full {
   max-width: 1280px;
   margin: auto;
+}
+
+.lado-esquerdo {
+  display: inline-block;
+  width: 60%;
+  vertical-align: top;
+  padding-right: 15px;
+}
+
+.lado-direito {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
 }
 
 #cabecalho {
@@ -40,6 +54,10 @@ section {
   padding: 50px;
 }
 
+p {
+  line-height: 30px;
+}
+
 #licoes_aprendidas , #licoes_a_aprender {
   display: inline-block;
   margin-left: 25px;
@@ -62,4 +80,6 @@ td {
 
 #rodape h1 {
   color: white;
+  font-size: 20px;
+  padding: 15px;
 }
