--- a/style.css
+++ b/style.css
@@ -1,101 +1,101 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    background-color: rgb(253, 251, 251);
-    font-family: 'Montserrat', sans-serif;
+  background-color: rgb(253, 251, 251);
+  font-family: Montserrat, sans-serif;
 }
 
 .word {
-    color: goldenrod;
-    font-weight: bolder;
+  color: goldenrod;
+  font-weight: 1000;
 }
 
 #cabecalho {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    color: white;
-    font-size: 25px;
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  color: white;
+  font-size: 25px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
 }
 
 #links li {
-    display: inline-block;
-    padding: 15px;
-    font-size: 15px;
-    right: 100%;
+  display: inline-block;
+  padding: 15px;
+  font-size: 15px;
+  right: 100%;
 }
 
 #links li a {
-    color: goldenrod;
-    font-family: sans-serif;
-    text-decoration: none;
+  color: goldenrod;
+  font-family: sans-serif;
+  text-decoration: none;
 }
 
 #links li:hover {
-    color: rgb(255, 174, 0);
-    font-weight: bolder;
+  color: rgb(255, 174, 0);
+  font-weight: 1000;
 }
 
 #minha_foto {
-    margin: 0px 0px 0px 40px;
-    border-radius: 100%;
-    width: 250px;
+  margin-left: 40px;
+  border-radius: 100%;
+  width: 250px;
 }
 
 .lista {
-    display: flex;
-    margin-top: 80px;
-    gap: 20px;
+  display: flex;
+  margin-top: 80px;
+  gap: 20px;
 }
 
 h2 {
-    color: black;
-    font-weight: bolder;
+  color: black;
+  font-weight: 1000;
 }
 
 #article {
-    color: black;
-    font-weight: bolder;
-    line-height: 35px;
+  color: black;
+  font-weight: 1000;
+  line-height: 35px;
 }
 
 #aside {
-    font-size: 13px;
-    text-align: center;
-    color: black;
-    font-weight: bolder;
-    margin-top: 100px;
+  font-size: 13px;
+  text-align: center;
+  color: black;
+  font-weight: 1000;
+  margin-top: 100px;
 }
 
 .listas {
-    display: flex;
-    margin: 60px 100px;
-    gap: 50%;
+  display: flex;
+  margin: 60px 100px;
+  gap: 50%;
 }
 
 .listas section h2 {
-    line-height: 60px;
+  line-height: 60px;
 }
 
 #licoes_a_aprender {
-    color: black;
-    font-weight: bolder;
+  color: black;
+  font-weight: 1000;
 }
 
 #licoes_aprendidas {
-    color: black;
-    font-weight: bolder;
+  color: black;
+  font-weight: 1000;
 }
 
 footer {
-    font-family: monospace;
-    background-color: black;
-    color: white;
-    text-align: right;
-    padding: 10px;
+  font-family: monospace;
+  background-color: black;
+  color: white;
+  text-align: right;
+  padding: 10px;
 }
