--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@ body {
 }
 
 #cabecalho {
+  background-color: rgb(47, 193, 140);
   font-family: Arial, Helvetica, sans-serif;
+  /* padding: 10px 100%; */
   position: fixed;
   top: 0;
-  text-align: center;
+  /* text-align: center; */
 }
 
+
 .indice {
-  display: inline-block; 
-  margin-top: 100px;
+  display: inline-block;
+  margin-top: 150px;
 }
 
 img {
@@ -29,6 +32,11 @@ img {
 table {
   border: 1;
   font-size: 15px;
+  height: 5px;
   padding: 10px;
   margin: 10px 30px;
+}
+
+.ok {
+  color: rgb(47, 193, 140);
 }
