--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
   background-color: rgb(253, 251, 251);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
   font-size: 14px;
+  color: rgba(14, 0, 0, 0.541);
+  width: 1366px;
+  align-self: start;
 }
 table {
   margin:10px;
@@ -33,7 +36,7 @@ td {
   display: inline;
   line-height: 1.1;
 }
-.lado-direito-centro {
+.lado-direito {
   float: left;
   width: 70%;
 }
@@ -49,7 +52,7 @@ td {
 }
 #cabecalho {
   position: fixed;
-  width: 100%;
+  width: 1366px;
   height: 100px;
   display: inline;
   top: 0;
